--- a/semesterGPA.html
+++ b/semesterGPA.html
@@ -7,7 +7,7 @@
   <div class="classes">
     <h1>Semester GPA</h1>
     <form method="past">
-      <input type="text" name="u" placeholder="class" id="class1" />
+      <input type="text" name="u" placeholder="class name1" id="class1" />
       <input type="text" name="u" placeholder="class name" id="class2"  />
       <input type="text" name="u" placeholder="class name" id="class3" />
       <input type="text" name="u" placeholder="class name" id="class4" />
