values are being stored - finally

--- a/index.html
+++ b/index.html
@@ -1,71 +1,17 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="UTF-8">
-  <title>Navbar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+  <title>NAVBAR</title>
 </head>
+
 <header>
-  <h1>GPA<span>calculatR</span></h1>
-  <nav>
-    <ul>
-      <li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
-      <li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
-      <li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
-    </ul>
-  </nav>
+  <h1>GPA<span>calculatR</h1>
+    <nav>
+      <ul>
+        <li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
+        <li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
+        <li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
+      </ul>
+    </nav>
 </header>
-
-<body>
-
-
-
-
-  <div id="login_div" class="main-div">
-    <h3>Login</h3>
-    <form method="past">
-      <input type="text" name="u" placeholder="Username" id="email_field" />
-      <input type="password" name="p" placeholder="Password" id="password_field" />
-
-      <button id="btnSignUp" class="btn btn-secondary">
-        Sign Up
-      </button>
-
-      <button id="btnLogin" class="btn btn-secondary">
-        Login
-      </button>
-
-      <button id="btnLogout" class="btn btn-action hide">
-        Logout
-      </button>
-
-    </div>
-
-
-    <!-- <div id="user_div" class="loggedin-div">
-    <h3>Welcome User</h3>
-    <p>Welcome to Firebase Login</p> -->
-
-    <!-- <button id="btnLogout" class="btn btn-action hide">
-    Logout
-  </button> -->
-
-  <!-- </div> -->
-
-  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-  <script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyBuIpaeijwTQrqOjr3r50m8_PkhNQWoaWE",
-    authDomain: "example-22160.firebaseapp.com",
-    databaseURL: "https://example-22160.firebaseio.com",
-    projectId: "example-22160",
-    storageBucket: "example-22160.appspot.com",
-    messagingSenderId: "268241068107"
-  };
-  firebase.initializeApp(config);
-</script>
-
-<script src="app.js"></script>
-
-</body>
 </html>
