--- a/semesterGPA.html
+++ b/semesterGPA.html
@@ -2,28 +2,28 @@
 <meta charset="utf-8">
 
 <h1>Calculate<span>Your<span>Semester<span>GPA</h1>
-<form>
-  <input type="text" name="class1" placeholder="class 1" id="class1">
-  <input type="text" name="gpa1" placeholder="gpa 1" id="gpa1">
-  <input type="text" name="ch1" placeholder="credit hours" id="ch1">
-  <button onclick="getValues()">Calculate</button>
-  <select id="grades">
-      <option value="A+">A+</option>
-      <option value="A">A</option>
-      <option value="A-">A-</option>
-      <option value="B+">B+</option>
+  <form>
+    <input type="text" name="class1" placeholder="class 1" id="class1">
+    <input type="text" name="ch1" placeholder="credit hours" id="ch1">
+    <select id="grades">
+      <option value="A+">A+</option>
+      <option value="A">A</option>
+      <option value="A-">A-</option>
+      <option value="B+">B+</option>
       <option value="B">B</option>
-      <option value="B-">B-</option>
-    </select>
-    <br><br>
-    <button type="submit" onclick="getNumbers()">Submit</button>
-
+      <option value="B-">B-</option>
+      <option value="C+">C+</option>
+      <option value="C">C</option>
+      <option value="C-">C-</option>
+      <option value="D+">D+</option>
+      <option value="D">D</option>
+      <option value="D-">D-</option>
+      <option value="F">F</option>
+    </select>
+    <br><br>
+    <button type="submit" onclick="getValues()">Calculate</button>
 
 </form>
-
-
- 
-
 
 
 
