--- a/semesterGPA.html
+++ b/semesterGPA.html
@@ -21,7 +21,7 @@
       <option value="F">F</option>
     </select>
     <br><br>
-    <button type="submit" onclick="getValues()">Calculate</button>
+    <button onclick="getValues()">Calculate</button>
 
 </form>
 
