--- a/website/semesterGPA.html
+++ b/website/semesterGPA.html
@@ -12,7 +12,7 @@
 				<div class="mdl-selectfield">
         				<select id="row1Select">
         					<option value="" disabled selected>Select</option>
-          					<option value="A">A</option>
+          					<option value="A+/A">A+/A</option>
 						    <option value="A-">A-</option>
 						    <option value="B+">B+</option>
 						    <option value="B">B</option>
@@ -22,7 +22,7 @@
 						    <option value="C-">C-</option>
 						    <option value="D+">D+</option>
 						    <option value="D">D</option>
-                <option value="D-">D-</option>
+                			<option value="D-">D-</option>
 						    <option value="F">F</option>
 				        </select>
 				      </div>
@@ -55,7 +55,27 @@
 		</table>
 		<button type="button" class="addButton" onclick="addElement()">ADD</button>
 		<button type="button" class="calculateButton" onclick="calculate()">CALCULATE</button>
+		<button type="button" class="calculatecgpa" onclick="goToNewScreen()">CALCULATE CUMULATIVE GPA</button>
 <h1 id="gpa" class="hidden">GPA</h1>
+
+
+
+<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAb8vveT3HAG9onvSvs6Cn5qkS22KK0Po0",
+    authDomain: "cs252-58cdc.firebaseapp.com",
+    databaseURL: "https://cs252-58cdc.firebaseio.com",
+    projectId: "cs252-58cdc",
+    storageBucket: "cs252-58cdc.appspot.com",
+    messagingSenderId: "895628017578"
+  };
+  firebase.initializeApp(config);
+
+
+
+</script>
 
 <script src="semesterGPA.js"></script>
 
