--- a/website/cumulativeGPA.html
+++ b/website/cumulativeGPA.html
@@ -1,5 +1,16 @@
 <html>
 <body>
+	<head>
+		<link rel="stylesheet" href="cumulativeGPA.css">
+	</head>
+
+	<ul>
+		<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
+		<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
+		<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
+		<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
+		<li><a href="profile.html">Profile Settings</a></li>
+	</ul>
 
 <input type="text" id="cGPA" placeholder="Cumulative GPA to date">
 	<input type="text" id="creds" placeholder="total credits earned to date">
