--- a/website/desiredGrade.html
+++ b/website/desiredGrade.html
@@ -1,5 +1,17 @@
 <html>
 
+<head>
+  <link rel="stylesheet" href="desiredGrade.css">
+</head>
+
+<ul>
+	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
+	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
+	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
+	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
+	<li><a href="profile.html">Profile Settings</a></li>
+</ul>
+
 <h1>Final Grade Calculator</h1>
 <h2>Determine what you need on you final exam</h2>
 <div class="inputs">
