--- a/website/courseGrade.html
+++ b/website/courseGrade.html
@@ -1,6 +1,19 @@
 <html>
 <body>
 
+  <head>
+    <link rel="stylesheet" href="courseGrade.css">
+  </head>
+
+  <ul>
+  	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
+  	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
+  	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
+  	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
+  	<li><a href="profile.html">Profile Settings</a></li>
+  </ul>
+
+
 <h1 id="header">Weighted Calculator</h1>
   <table>
     <tr>
