--- a/website/courseGrade.html
+++ b/website/courseGrade.html
@@ -6,6 +6,7 @@
   </head>
 
   <ul>
+    <li><a href="home.html">Home</a></li>
   	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
   	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
   	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
