--- a/website/cumulativeGPA.html
+++ b/website/cumulativeGPA.html
@@ -5,12 +5,15 @@
 	</head>
 
 	<ul>
+		<li><a href="home.html">Home</a></li>
 		<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
 		<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
 		<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
 		<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
 		<li><a href="profile.html">Profile Settings</a></li>
 	</ul>
+
+	<h1 id="header">Calculate Your Cumulative GPA</h1>
 
 <input type="text" id="cGPA" placeholder="Cumulative GPA to date">
 	<input type="text" id="creds" placeholder="total credits earned to date">
