--- a/website/desiredGrade.html
+++ b/website/desiredGrade.html
@@ -5,6 +5,7 @@
 </head>
 
 <ul>
+  <li><a href="home.html">Home</a></li>
 	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
 	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
 	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
@@ -13,13 +14,13 @@
 </ul>
 
 <h1>Final Grade Calculator</h1>
-<h2>Determine what you need on you final exam</h2>
+<h2>Determine what you need on your final exam</h2>
 <div class="inputs">
-  <p>Current Grade: <input type="number" id="currentGrade"></p>
-  <p>Desired Grade: <input type="number" id="desiredGrade"></p>
-  <p>Worth of Final (%): <input type="number" id="finalWorth"></p>
-  <p>Grade Needed (%): <input type="number" id="gradeNeeded"><br>
-    <input type="submit" value="submit" onclick='finalGrade()'>
+  <p>Current Grade: <input type="number" id="currentGrade" class="currentGrade"></p>
+  <p>Desired Grade: <input type="number" id="desiredGrade" class="desiredGrade"></p>
+  <p>Worth of Final (%): <input type="number" id="finalWorth" class="finalWorth"></p>
+  <p>Grade Needed (%): <input type="number" id="gradeNeeded" class="gradeNeeded"><br>
+    <input type="submit" value="submit" onclick='finalGrade()' class="submit">
 
   </div>
 
