--- a/website/semesterGPA.html
+++ b/website/semesterGPA.html
@@ -6,6 +6,7 @@
 
 
 <ul>
+	<li><a href="home.html">Home</a></li>
 	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
 	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
 	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
@@ -25,8 +26,8 @@
 		    <td>
 				<div class="mdl-selectfield">
         				<select id="row1Select">
-        					<option value="" disabled selected>Select</option>
-          					<option value="A+/A">A+/A</option>
+        			  <option value="" disabled selected>Select</option>
+          			<option value="A+/A">A+/A</option>
 						    <option value="A-">A-</option>
 						    <option value="B+">B+</option>
 						    <option value="B">B</option>
