--- a/website/us.html
+++ b/website/us.html
@@ -1,1 +1,18 @@
-hello
+<html>
+
+<head>
+	<link rel="stylesheet" href="us.css">
+</head>
+
+<ul>
+	<li><a href="home.html">Home</a></li>
+	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
+	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
+	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
+	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
+	<li><a href="profile.html">Profile Settings</a></li>
+</ul>
+
+<h1 id="header">About Us</h1>
+
+</html>
