more css changes

--- a/website/courseGrade.html
+++ b/website/courseGrade.html
@@ -15,10 +15,10 @@
   </ul>
 
 
-<h1 id="header">Weighted Calculator</h1>
+<h1 id="header">Current Course Grade</h1>
   <table>
     <tr>
-      <th>Grade (%)</th>
+      <th>Grade</th>
       <th>Weight</th>
     </tr>
 
@@ -51,9 +51,9 @@
     </tr>
   </table>
 
-<button type="button" class="calcgrade" onclick="calculate()">CALCULATE</button>
-<h1 id="grade" class="hidden">Current Grade</h1>
 
+<h2 id="grade" class="hidden">Current Grade: </h2>
+<button type="button" class="calcgrade" onclick="calculate()">CALCULATE</button>
   <script src="courseGrade.js"></script>
 </body>
 
