more css changes

--- a/website/desiredGrade.html
+++ b/website/desiredGrade.html
@@ -18,9 +18,9 @@
 <div class="inputs">
   <p>Current Grade: <input type="number" id="currentGrade" class="currentGrade"></p>
   <p>Desired Grade: <input type="number" id="desiredGrade" class="desiredGrade"></p>
-  <p>Worth of Final (%): <input type="number" id="finalWorth" class="finalWorth"></p>
-  <p>Grade Needed (%): <input type="number" id="gradeNeeded" class="gradeNeeded"><br>
-    <input type="submit" value="submit" onclick='finalGrade()' class="submit">
+  <p>Worth of Final: <input type="number" id="finalWorth" class="finalWorth"></p>
+  <p>Grade Needed: <input type="number" id="gradeNeeded" class="gradeNeeded"><br>
+    <input type="submit" value="Submit" onclick='finalGrade()' class="submit">
 
   </div>
 
