--- a/website/semesterGPA.html
+++ b/website/semesterGPA.html
@@ -13,7 +13,7 @@
 	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
 	<li><a href="profile.html">Profile Settings</a></li>
 </ul>
-<h1 id="header">GPA Calculator</h1>
+<h1 id="header">Semester GPA</h1>
 
 		<table>
 		  <tr>
@@ -50,16 +50,12 @@
 					    <label for="row1opt0" onclick="">0</label>
 					    <input id="row1opt1" name="view" type="radio">
 					    <label for="row1opt1" onclick="">1</label>
-
 					    <input id="row1opt2" name="view" type="radio">
 					    <label for="row1opt2" onclick="">2</label>
-
 					    <input id="row1opt3" name="view" type="radio">
 					    <label for="row1opt3" onclick="">3</label>
-
               <input id="row1opt4" name="view" type="radio">
 					    <label for="row1opt4" onclick="">4</label>
-
               <input id="row1opt5" name="view" type="radio">
 					    <label for="row1opt5" onclick="">5</label>
 
