added css and resource/useful links page

--- a/website/courseGrade.html
+++ b/website/courseGrade.html
@@ -6,11 +6,13 @@
   </head>
 
   <ul>
-    <li><a href="home.html">Home</a></li>
-  	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
-  	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
-  	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
-  	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
+  	<li><a href="home.html">Home</a></li>
+  	<li><a href="semesterGPA.html">Semester GPA</a></li>
+  	<li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
+  	<li><a href="courseGrade.html">Current Course Grade</a></li>
+  	<li><a href="desiredGrade.html">Desired Final Grade</a></li>
+  	<li><a href="resources.html">Resources</a></li>
+    <li><a href="usefullinks.html">Useful Links</a></li>
   	<li><a href="profile.html">Profile Settings</a></li>
   </ul>
 
