--- a/website/cumulativeGPA.html
+++ b/website/cumulativeGPA.html
@@ -1,24 +1,26 @@
-<html>
+  <html>
 <body>
 
 	<head>
 		<link rel="stylesheet" href="cumulativeGPA.css">
 	</head>
 
-	<ul>
-		<li><a href="home.html">Home</a></li>
-		<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
-		<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
-		<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
-		<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
-		<li><a href="profile.html">Profile Settings</a></li>
-	</ul>
+  <ul>
+  	<li><a href="home.html">Home</a></li>
+  	<li><a href="semesterGPA.html">Semester GPA</a></li>
+  	<li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
+  	<li><a href="courseGrade.html">Current Course Grade</a></li>
+  	<li><a href="desiredGrade.html">Desired Final Grade</a></li>
+  	<li><a href="resources.html">Resources</a></li>
+    <li><a href="usefullinks.html">Useful Links</a></li>
+  	<li><a href="profile.html">Profile Settings</a></li>
+  </ul>
 
 	<h1 id="header">Cumulative GPA</h1>
-
+<div class="harika">
 <input type="text" id="cGPA" placeholder="Cumulative GPA to date" class="t1">
 	<input type="text" id="creds" placeholder="Total credits earned to date" class="t2">
-
+</div>
 	<table>
 		<tr>
 			<th>Class</th>
@@ -74,9 +76,11 @@
 	</table>
 
 	<h2 id="gpa" class="hidden">GPA: </h2>
+  <div class="simona">
 	<button type="button" class="addButton" onclick="addElement()">ADD</button>
 	<button type="button" class="calculateCGPA" onclick="c()">CALCULATE</button>
 <script src="cumulativeGPA.js"></script>
+</div>
 
 </body>
 </html>
