--- a/website/home.html
+++ b/website/home.html
@@ -17,7 +17,7 @@
 
         <div><li><a href="desiredGrade.html" class="grid-item4">Calculate your Desired Final Grade</a></li></div>
         <div><li><a href="profile.html" class="grid-item5">Profile Settings</a></li></div>
-        <div><li><a href="us.html" class="grid-item6">About Us</a></li></div>
+        <div><li><a href="resources.html" class="grid-item6">Resources</a></li></div>
 
       </div>
       <button class="logout"onclick="logout()">Logout</button>
