--- a/website/desiredGrade.html
+++ b/website/desiredGrade.html
@@ -6,11 +6,13 @@
 
 <ul>
   <li><a href="home.html">Home</a></li>
-	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
-	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
-	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
-	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
-	<li><a href="profile.html">Profile Settings</a></li>
+  <li><a href="semesterGPA.html">Semester GPA</a></li>
+  <li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
+  <li><a href="courseGrade.html">Current Course Grade</a></li>
+  <li><a href="desiredGrade.html">Desired Final Grade</a></li>
+  <li><a href="resources.html">Resources</a></li>
+  <li><a href="usefullinks.html">Useful Links</a></li>
+  <li><a href="profile.html">Profile Settings</a></li>
 </ul>
 
 <h1>Final Grade Calculator</h1>
@@ -20,9 +22,9 @@
   <p>Desired Grade: <input type="number" id="desiredGrade" class="desiredGrade"></p>
   <p>Worth of Final: <input type="number" id="finalWorth" class="finalWorth"></p>
   <p>Grade Needed: <input type="number" id="gradeNeeded" class="gradeNeeded"><br>
-    <input type="submit" value="Submit" onclick='finalGrade()' class="submit">
-
-  </div>
+    <br></br>
+  <input type="submit" value="Submit" onclick='finalGrade()' class="submit">
+</div>
 
 
   <script src="desiredGrade.js"></script>
