--- a/website/semesterGPA0.html
+++ b/website/semesterGPA0.html
@@ -1,22 +1,5 @@
 <html>
-<head>
-	<link rel="stylesheet" href="semesterGPA.css">
-</head>
-
-
-<ul>
-	<li><a href="home.html">Home</a></li>
-	<li><a href="semesterGPA.html">Semester GPA</a></li>
-	<li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
-	<li><a href="courseGrade.html">Current Course Grade</a></li>
-	<li><a href="desiredGrade.html">Desired Final Grade</a></li>
-	<li><a href="resources.html">Resources</a></li>
-	<li><a href="usefullinks.html">Useful Links</a></li>
-	<li><a href="profile.html">Profile Settings</a></li>
-</ul>
-
-<h1 id="header">Semester GPA</h1>
-
+<h1 id="header">GPA Calculator</h1>
 		<table>
 		  <tr>
 		    <th>Class</th>
@@ -27,10 +10,9 @@
 		    <td>Class 1</td>
 		    <td>
 				<div class="mdl-selectfield">
-					<div class="text">
         				<select id="row1Select">
-        			  <option value="" disabled selected>Select</option>
-          			<option value="A+/A">A+/A</option>
+        					<option value="" disabled selected>Select</option>
+          					<option value="A+/A">A+/A</option>
 						    <option value="A-">A-</option>
 						    <option value="B+">B+</option>
 						    <option value="B">B</option>
@@ -40,24 +22,28 @@
 						    <option value="C-">C-</option>
 						    <option value="D+">D+</option>
 						    <option value="D">D</option>
-                <option value="D-">D-</option>
+                			<option value="D-">D-</option>
 						    <option value="F">F</option>
 				        </select>
-							</div>
 				      </div>
 			</td>
 		    <td>
-		    	<div class="switch-toggleswitch-custom">
-					    <input id="row1opt0" name="view" type="radio">
+		    	<div class="switch-toggle switch-custom">
+					    <input id="row1opt0" name="view" type="radio" checked>
 					    <label for="row1opt0" onclick="">0</label>
+
 					    <input id="row1opt1" name="view" type="radio">
 					    <label for="row1opt1" onclick="">1</label>
+
 					    <input id="row1opt2" name="view" type="radio">
 					    <label for="row1opt2" onclick="">2</label>
+
 					    <input id="row1opt3" name="view" type="radio">
 					    <label for="row1opt3" onclick="">3</label>
+
               <input id="row1opt4" name="view" type="radio">
 					    <label for="row1opt4" onclick="">4</label>
+
               <input id="row1opt5" name="view" type="radio">
 					    <label for="row1opt5" onclick="">5</label>
 
@@ -67,12 +53,12 @@
 		  </tr>
 
 		</table>
+		<button type="button" class="addButton" onclick="addElement()">ADD</button>
+		<button type="button" class="calculateButton" onclick="calculate()">CALCULATE</button>
+		<button type="button" class="calculatecgpa" onclick="goToNewScreen()">CALCULATE CUMULATIVE GPA</button>
+<h1 id="gpa" class="hidden">GPA</h1>
 
-<h2 id="gpa" class="hidden">GPA: </h2>
-<div class="ass">
-<button type="button" class="addButton" onclick="addElement()">ADD</button>
-<button type="button" class="calculateButton" onclick="calculate()">CALCULATE</button>
-</div>
+
 
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
   <script>
