--- a/website/cumulativeGPA.html
+++ b/website/cumulativeGPA.html
@@ -6,14 +6,16 @@
 	</head>
 
   <ul>
-  	<li><a href="home.html">Home</a></li>
-  	<li><a href="semesterGPA.html">Semester GPA</a></li>
-  	<li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
-  	<li><a href="courseGrade.html">Current Course Grade</a></li>
-  	<li><a href="desiredGrade.html">Desired Final Grade</a></li>
-  	<li><a href="resources.html">Resources</a></li>
+
+    <li><a href="home.html">Home</a></li>
+    <li><a href="semesterGPA.html">Semester GPA</a></li>
+    <li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
+    <li><a href="courseGrade.html">Current Course Grade</a></li>
+    <li><a href="desiredGrade.html">Desired Final Grade</a></li>
+    <li><a href="resources.html">Resources</a></li>
     <li><a href="usefullinks.html">Useful Links</a></li>
-  	<li><a href="profile.html">Profile Settings</a></li>
+    <li><a href="us.html">About Us</a></li>
+    <li><a href="profile.html">Profile Settings</a></li>
   </ul>
 
 	<h1 id="header">Cumulative GPA</h1>
