--- a/website/resources.html
+++ b/website/resources.html
@@ -5,6 +5,7 @@
 </head>
 
 <ul>
+
   <li><a href="home.html">Home</a></li>
   <li><a href="semesterGPA.html">Semester GPA</a></li>
   <li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
@@ -12,6 +13,7 @@
   <li><a href="desiredGrade.html">Desired Final Grade</a></li>
   <li><a href="resources.html">Resources</a></li>
   <li><a href="usefullinks.html">Useful Links</a></li>
+  <li><a href="us.html">About Us</a></li>
   <li><a href="profile.html">Profile Settings</a></li>
 </ul>
 
