--- a/website/us.html
+++ b/website/us.html
@@ -5,14 +5,33 @@
 </head>
 
 <ul>
-	<li><a href="home.html">Home</a></li>
-	<li><a href="semesterGPA.html">Calculate your Semester GPA</a></li>
-	<li><a href="cumulativeGPA.html">Calculate your Cumulative GPA</a></li>
-	<li><a href="courseGrade.html">Calculate your Current Course Grade</a></li>
-	<li><a href="desiredGrade.html">Calculate your Desired Final Grade</a></li>
-	<li><a href="profile.html">Profile Settings</a></li>
+
+  <li><a href="home.html">Home</a></li>
+  <li><a href="semesterGPA.html">Semester GPA</a></li>
+  <li><a href="cumulativeGPA.html">Cumulative GPA</a></li>
+  <li><a href="courseGrade.html">Current Course Grade</a></li>
+  <li><a href="desiredGrade.html">Desired Final Grade</a></li>
+  <li><a href="resources.html">Resources</a></li>
+  <li><a href="usefullinks.html">Useful Links</a></li>
+  <li><a href="us.html">About Us</a></li>
+  <li><a href="profile.html">Profile Settings</a></li>
 </ul>
 
 <h1 id="header">About Us</h1>
+
+<div class="grid-container">
+	<div class="grid-item">Simona <br>
+		<label>Virga</label><br>
+		<label>svirga@purdue.edu</label><br>
+		<label>Major: Computer Science</label><br>
+	</div>
+
+	<div class="grid-item">Harika<br>
+		<label>Lingareddy</label><br>
+		<label>hlingar@purdue.edu</label><br>
+		<label>Major: Computer Science</label><br>
+	</div>
+</div>
+
 
 </html>
