--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-  <h1>GPA<span>calculatR</h1>
+  <h1>Welcome To GPA <br>CalculatR</h1>
 
-  	<button onclick="googleSignIn()">Google Signin</button>
+  	<button onclick="googleSignIn()" class="signin">Google Signin</button>
 
 
 
